--- a/testing-regex-mau.ipynb
+++ b/testing-regex-mau.ipynb
@@ -105,18 +105,19 @@
     "\n",
     "1. Creo patron regex y lo compilo\n",
     "\n",
-    " Patron: `([uU]\\$?[sSdD\\$]?[dD\\$]?|dolares)\\s?(\\d+\\.?\\,?\\d+\\.?\\,?\\d+\\.?\\,?\\d{1,}\\,?\\.?\\d+)(?!(.*m2|.*mc|.*metros))`\n",
-    "- Comienza identificando la moneda (USD, usd, U\\\\$D, US\\\\$, etc.)\n",
-    "- Valor: desde 5 caracteres numericos, identifica comas (,) y puntos (.)\n",
-    "- Excluye al final caracteres que hagan referencia a metros cuadrados para evitar esos valores.\n",
+    " Patron: `([uU]\\$?[sSdD\\$]?[dD\\$]?|dolares)\\s?(\\d+\\.?\\,?\\d+\\.?\\,?\\d+\\.?\\,?\\d{1,}\\,?\\.?\\d+)(?!(.*m2|.*mc|.*metros))`<br>\n",
+    " \n",
+    "- Comienza identificando la moneda (USD, usd, U\\\\$D, US\\\\$, etc.)<br>\n",
+    "- Valor: desde 5 caracteres numericos, identifica comas (,) y puntos (.)<br>\n",
+    "- Excluye al final caracteres que hagan referencia a metros cuadrados para evitar esos valores.<br>\n",
     "\n",
     "2. Creo objeto de regex en nueva columna matches_precio para idenficar las coincidencias del pattron en la columna description\n",
     "\n",
     "3. Para identificar la efectividad y el valor de asignar precio desde la descripcion en el campo `price_aprox_usd` creo mascara booleana:\n",
     "\n",
-    "- valores nulos de columna `price_aprox_usd` \n",
-    "- valores no nulos de columna `matches_precio`\n",
-    "- AND: mascara booleana con todos los valores nulos de `price_aprox_usd` que si tengan un valor identificado en el campo `matches_precio` (viene de `description`). __Resultado: 583 registros"
+    "- valores nulos de columna `price_aprox_usd` <br>\n",
+    "- valores no nulos de columna `matches_precio`<br>\n",
+    "- AND: mascara booleana con todos los valores nulos de `price_aprox_usd` que si tengan un valor identificado en el campo `matches_precio` (viene de `description`). Resultado: 583 registros<br>"
    ]
   },
   {
