--- a/final/properati_g2.ipynb
+++ b/final/properati_g2.ipynb
@@ -1049,12 +1049,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "FOTO"
+    "<img src='https://github.com/DHDSDesafios/DH_DS_desafio_1_propierati/raw/master/data/layout_analisis.JPG' align='center' width=50%/>"
    ]
   },
   {
